--- a/app/views/clients/clients.html
+++ b/app/views/clients/clients.html
@@ -27,7 +27,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr class="pointer-main" ng-repeat="client in clients.currentPageItems  | filter:filterText" >
+            <tr class="pointer-main" ng-disabled ="client.status.value == 'Closed'" ng-repeat="client in clients.currentPageItems  | filter:filterText" >
                 <td class="pointer" data-ng-click="routeTo(client.id)">{{client.displayName}}</td>
                  <td class="pointer" data-ng-click="routeTo(client.id)"><i class="icon-stop {{client.status.value | StatusLookup}}"></i>&nbsp;{{client.status.value}}</td>
                 <td class="pointer" data-ng-click="routeTo(client.id)">{{client.accountNo}}</td>
