--- a/app/views/administration/global.html
+++ b/app/views/administration/global.html
@@ -1,10 +1,9 @@
-<div ng-controller="GlobalConfigurationController">
 <div>
     <ul class="breadcrumb">
         <li class="active">{{'label.globalconfigurations' | translate}}</li>
     </ul>
 </div>
-<div class="row-fluid">
+<div class="row-fluid" ng-controller="GlobalConfigurationController">
     <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="{{'label.filterbyname' | translate}}">
     <table class="table">
         <thead>
@@ -20,16 +19,16 @@
         <tr ng-repeat="config in configs  | filter:filterText">
             <td>{{config.name}}</a></td>
             <td>{{config.enabled}}</td>
-            <td><span ng-show="PermissionService.showMenu('UPDATE_CONFIGURATION')"><button type="button" class="btn btn-success flag" data-ng-hide="config.enabled" data-ng-click="enable(config.name)"><i class="icon-flag-alt"></i></button>
-                <button type="button" class="btn btn-danger flag" data-ng-show="config.enabled" data-ng-click="disable(config.name)"><i class="icon-remove"></i></button>
-                </span>
+            <td></td>
+            <td>{{config.value}}</td>
+            <td><button type="button" class="btn btn-success flag" data-ng-hide="config.enabled" data-ng-click="enable(config.id,config.name)"><i class="icon-flag-alt"></i></button>
+                <button type="button" class="btn btn-danger flag" data-ng-show="config.enabled" data-ng-click="disable(config.id,config.name)"><i class="icon-remove"></i></button>
             </td>
             <td></td>
             <td><a ng-click="edit(config.id)" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td> 
         </tr>
         </tbody>
     </table>
-</div>
     
     <script type="text/ng-template" id="editglobal.html">
 
