Fixes to paymentgateway,client creation,inventory

--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -105,7 +105,7 @@
            </td>
            <td>
             <div class="control-group">
-              <label class="control-label">CUG<span class="required">*</span></label>
+              <label class="control-label">CUG</span></label>
               <div class="controls">
                 <select ng-model="formData.groupName"  ng-options="groupNameData.groupName as groupNameData.groupName for groupNameData in groupNameDatas" value="{{groupNameDatas.groupName}}"></select>
               </div>
