--- a/app/views/clients/payInvoice.html
+++ b/app/views/clients/payInvoice.html
@@ -126,8 +126,16 @@
          						</div>
 							</td>
 						</tr>
-
-						
+						<tr>
+							<td>
+							<div class="control-group">
+	          				<label class="control-label">{{'label.notes' | translate}}</label>
+		        			<div class="controls">
+		          			<textarea ng-model="formData.remarks"></textarea>
+		        			</div>
+	        				</div>
+	        				</td>
+						</tr>
 					</table>
 			
 				</td>
@@ -178,6 +186,7 @@
 							</td>
 							
 						</tr>
+				
 					</table>
 				  </div>
 				</td>
