--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -101,6 +101,7 @@
 		     <a ng-show ="orderData.status != 'PENDING'" ng-click="extension()" class="btn btn-primary"><i class="icon-cog"></i>Extension</a>
 		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/neworder/{{orderData.pdid}}/{{clientId}}" class="btn btn-primary"><i class="icon-cog"></i>Change Plan</a>
 		     <a ng-show ="orderData.status == 'PENDING'" href="#/provision/{{orderData.id}}" class="btn btn-primary"><i class="icon-cog"></i>Provision It</a>
+		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/editprovision/{{orderData.id}}" class="btn btn-primary"><i class="icon-cog"></i>Edit Provision</a>
 		    
 	      
 	        <span  class="btn-group">
@@ -278,6 +279,7 @@
                  <th>{{ 'table.order.transactiondate' | translate }}</th>
                  <th>{{ 'table.order.transactiontype' | translate }}</th>
                  <th>{{ 'table.order.actualdate' | translate }}</th>
+                 <th>{{ 'table.order.user' | translate }}</th>
             </tr>
         </thead>
         <tbody>
@@ -286,6 +288,7 @@
                 <td>{{orderHistory.transactionDate | DateFormat}}</td>
                 <td>{{orderHistory.transactioType}}</td>            
                 <td>{{orderHistory.actualDate | DateFormat}}</td>        
+                <td>{{orderHistory.userName}}</td>
                 
                 
             </tr>
