--- a/app/views/system/viewschedulerjob.html
+++ b/app/views/system/viewschedulerjob.html
@@ -10,8 +10,8 @@
     <div class="pull-right">
 
       <div class="btn-group">
-          <a ng-show="PermissionService.showMenu('UPDATE_SCHEDULER')" href="#/editschedulerjob/{{job.jobId}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
-          <span ng-show="PermissionService.showMenu('UPDATE_SCHEDULE')"><a  ng-hide="(job.displayName == 'Requestor' || job.displayName =='Responser')" href="#/editjobparameters/{{job.jobId}}" class="btn btn-primary"><i class=""></i>Edit Job Parameters</a></span>
+          <a ng-show="PermissionService.showMenu('UPDATE_SCHEDULERJOB')" href="#/editschedulerjob/{{job.jobId}}" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
+          <span ng-show="PermissionService.showMenu('UPDATE_SCHEDULERJOBPARAMETER')"><a  ng-hide="(job.displayName == 'Requestor' || job.displayName =='Responser')" href="#/editjobparameters/{{job.jobId}}" class="btn btn-primary"><i class=""></i>Edit Job Parameters</a></span>
           <a href="#/viewhistory/{{job.jobId}}" class="btn btn-primary"><i class=""></i> view history</a>
       </div>
     </div>
