--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -101,8 +101,8 @@
 		     <a ng-show ="orderData.status != 'PENDING'" ng-click="extension()" class="btn btn-primary"><i class="icon-cog"></i>Extension</a>
 		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/neworder/{{orderData.pdid}}/{{clientId}}" class="btn btn-primary"><i class="icon-cog"></i>Change Plan</a>
 		     <a ng-show ="orderData.status == 'PENDING'" href="#/provision/{{orderData.id}}" class="btn btn-primary"><i class="icon-cog"></i>Provision It</a>
-		     <!-- <a ng-show ="orderData.status == 'ACTIVE'" href="#/editprovision/{{orderData.id}}" class="btn btn-primary"><i class="icon-cog"></i>Edit Provision</a> -->
-		     <a ng-show ="orderData.status == 'ACTIVE'" href="" ng-click="provision()" class="btn btn-primary"><i class="icon-cog"></i>Edit Provision</a>
+		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/editprovision/{{orderData.id}}" class="btn btn-primary"><i class="icon-cog"></i>Edit Provision</a> 
+		     <!-- <a ng-show ="orderData.status == 'ACTIVE'" href="" ng-click="provision()" class="btn btn-primary"><i class="icon-cog"></i>Provision Details</a> -->
 		    
 	      
 	        <span  class="btn-group">
