--- a/app/views/organization/createoffice.html
+++ b/app/views/organization/createoffice.html
@@ -27,6 +27,17 @@
             <tr>
               <td>
                 <div class="control-group">
+                  <label class="control-label">{{ 'label.officetype' | translate }}</label>
+                  <div class="controls">
+                     <select ng-model="formData.officeType"  ng-options="officeType.id as officeType.name for officeType in officeTypes" value="{{office.officeType}}">
+                     </select>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="control-group">
                   <label class="control-label">{{ 'label.parentoffice' | translate }}</label>
                   <div class="controls">
                     <select ng-model="formData.parentId"  ng-options="office.id as office.name for office in offices" value="{{office.id}}"></select>
