--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -50,8 +50,8 @@
 	         <a ng-show="orderData.status == 'PENDING'" ng-click="cancelOrder()" class="btn btn-primary"><i class="icon-remove-circle icon-white"></i> Cancel</a>
 	         <a ng-show ="association.orderId == null"  href="#/association/{{clientId}}/{{orderPriceDatas[0].orderId}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Pairing</a>
 		     <a ng-show ="orderData.status == 'DISCONNECTED' && association.orderId != null" ng-click="deAssociation()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Un Pairing</a>
-		     <a ng-show  ="flag == true" href="#/hardwareswap/{{association.saleId}}/{{clientId}}/{{association.orderId}}" class="btn btn-primary"><i class="icon-move"></i>Hardware Swap</a>
-		     <a ng-show ="orderData.status == 'ACTIVE'" ng-click="applyPromo()" class="btn btn-primary"><i class="icon-briefcase"></i>Apply Promo</a>
+		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/hardwareswap/{{association.saleId}}/{{clientId}}/{{association.orderId}}" class="btn btn-primary"><i class="icon-move"></i>Hardware Swap</a>
+		     <a ng-show ="orderData.status == 'ACTIVE' && flag == true" ng-click="applyPromo()" class="btn btn-primary"><i class="icon-briefcase"></i>Apply Promo</a>
 		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/neworder/{{orderData.pdid}}/{{clientId}}" class="btn btn-primary"><i class="icon-cog"></i>Change Plan</a>
 		    
 	      
@@ -90,19 +90,19 @@
 		<table width="100%" class="table table-striped table-bordered" width="0px">
 			<tr>
 				<td width="50%">{{ 'label.order.orderId' | translate }}</td>
-				<td width="50%">{{orderData.planCode}}</td>
+				<td width="50%">{{orderData.id}}</td>
 			</tr>
 			<tr>
 				<td width="30%">{{ 'label.order.contractperiod' | translate }}</td>
 				<td width="70%">{{orderData.contractPeriod}}</td>
 			</tr>
 			<tr>
-				<td width="30%">{{ 'label.plan.isprepaid' | translate }}</td>
-				<td width="70%">{{formData.isPrepaid}}</td>
+				<td width="30%">{{ 'label.order.startdate' | translate }}</td>
+				<td width="70%">{{orderData.startDate | DateFormat}}</td>
 			</tr>
 			<tr>
 				<td width="30%">{{ 'label.order.ordertype' | translate }}</td>
-				<td width="70%">{{orderData.userAction}}</td>
+				<td width="70%">{{formData.isPrepaid}}</td>
 			</tr>
 			<tr>
 				<td width="30%">{{ 'table.order.billingcycle' | translate }}</td>
@@ -198,18 +198,20 @@
         <thead>
             <tr class="graybg">
                 <th>{{ 'table.order.id' | translate }}</th>
-                <th>{{ 'table.order.discountcode' | translate }}</th>
                 <th>{{ 'table.order.discountdescription' | translate }}</th>
                 <th>{{ 'table.order.discountType' | translate }}</th>
+                <th>{{ 'table.order.discountstartdate' | translate }}</th>
+                <th>{{ 'table.order.discountenddate' | translate }}</th>
                 <th>{{ 'table.order.discountAmount' | translate }}</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="orderDiscountData in orderDiscountDatas">
                 <td>{{orderDiscountData.id}}</td>            
-                <td>{{orderDiscountData.discountcode}}</td>        
                 <td>{{orderDiscountData.discountdescription}}</td>
                 <td>{{orderDiscountData.discountType}}</td>
+                <td>{{orderDiscountData.discountstartDate | DateFormat}}</td>
+                <td>{{orderDiscountData.discountEndDate | DateFormat}}</td>
                 <td>{{orderDiscountData.discountAmount}}</td>
             </tr>
         </tbody>
