--- a/app/views/paymentgateway/paymentGateway.html
+++ b/app/views/paymentgateway/paymentGateway.html
@@ -13,7 +13,7 @@
        <div class="control-group">
             <!-- <label class="control-label" for="status">{{ 'label.paymentgateway.source' | translate }}</label> -->
            
-            {{ 'label.paymentgateway.source' | translate }} &nbsp;  <select ng-model="formData.source" ng-change="changeSource(formData.source)">
+          <select ng-model="formData.source" ng-change="changeSource(formData.source)">
               <option value="all">All</option>
               <option value="mpesa">Mpesa</option>
               <option value="tigo">Tigo</option>
