--- a/app/views/clients/createactivation.html
+++ b/app/views/clients/createactivation.html
@@ -36,9 +36,11 @@
            	<tr>
            	<td>
   		      	<div class="control-group">
-              		<label class="control-label" for="firstname">{{'label.name' | translate}}<span class="required">*</span></label>
+
+              		<label class="control-label" for="firstname">{{'lable.fullname' | translate}}<span class="required">*</span></label>
+
               		<div class="controls">
-                		<input type="text" id="firstname" name="firstname" ng-model="formData1.middlename" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
+                		<input type="text" id="firstname" name="firstname" ng-model="fullname" ng-change="formName(fullname)" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
                 		<span  ng-show="createclientform.firstname.$invalid">
                 			<small class="error" ng-show="createclientform.firstname.$error.pattern">alphanumeric and spaces only!</small>
                    			 <small class="error" ng-show="createclientform.firstname.$error.req">
@@ -109,7 +111,7 @@
           		<div class="control-group"  ng-repeat="item in getNumber(formData2.quantity)" name="serialNumberDiv">
                     <label class="control-label" for="serialNumber">{{ 'label.serialNumber' | translate }}&nbsp;<span class="required">*</span></label>
                     <div class="controls">
-             	    <input type="text" ng-show="config == 'SALE'" ng-model="formData2.itemDetail" name="serialNumber" ng-change="getData(formData2.itemDetail)" typeahead="itemDetail as itemDetail for itemDetail in itemDetails | limitTo:8" typeahead-min-length="0">
+             	    <input type="text" ng-show="config == 'SALE'" ng-model="serial" name="serial" ng-change="getData(serial)" typeahead="itemDetail as itemDetail for itemDetail in itemDetails | limitTo:8" typeahead-min-length="0">
              	     <input type="text" ng-show="config == 'OWN'" name="provisioningserialnumber" ng-model="formData5.provisioningSerialNumber" required late-Validate>
                     </div>
                </div>
@@ -131,10 +133,10 @@
            		</div>
            	</td>
            	<td>
-           		<div class="control-group">
+           		<div class="control-group" >
                    <label class="control-label" for="paytermCode">{{ 'label.activation.plan' | translate }}</label>
                      <div class="controls">
-                        <select ng-model="formData4.planId"  ng-options="plandata.id as plandata.planCode for plandata in plandatas" ng-change='setBillingFrequency(formData4.planId)' value="{{plandata.id}}"></select>
+                        <select ng-model="formData4.planCode"  ng-options="plandata.id as plandata.planCode for plandata in plandatas" ng-change='setBillingFrequency(formData4.planCode)' value="{{plandata.id}}"></select>
                     </div>
                  </div>	
              </td>
@@ -144,7 +146,7 @@
            		<div class="control-group">
                		<label class="control-label" for="contractPeriod">{{ 'label.order.contractperiod' | translate }}</label>
                 	 <div class="controls">
-                    	<select   ng-disabled="formData.isPrepaid == 'Y'" ng-model="formData4.contractPeriod"  ng-options="subscriptiondata.id as subscriptiondata.Contractdata for subscriptiondata in subscriptiondatas" value="{{billRuleData.id}}"></select>
+                    	<select   ng-disabled="formData4.isPrepaid == 'Y'" ng-model="formData4.contractPeriod"  ng-options="subscriptiondata.id as subscriptiondata.Contractdata for subscriptiondata in subscriptiondatas" value="{{billRuleData.id}}"></select>
                  	</div>
              	</div>
              </td>
@@ -166,7 +168,7 @@
               		</div>
             	</div>
             </td>
-            	 <td>
+           <td>
             	<div class="control-group" ng-hide="configurationProperty==false">
               		<label class="control-label">Password<span class="required">*</span></label>
              		 <div class="controls">
@@ -174,7 +176,6 @@
               		</div>
             	</div>
            	</td>
-           
              </tr>
              <tr>
              <td>
@@ -185,7 +186,8 @@
               		</div>
             	</div>
            	</td>
-            <td>
+           	
+           	  <td>
             	<datalist id="citylist">
                    <option  data-ng-repeat="city in cities" value="{{city}}">
              	</datalist>
@@ -198,4 +200,4 @@
               <button id="submit" type="submit"  class="btn btn-primary">Save</button>
             </div>
         </fieldset>
-      </form>
+      </form>y
