--- a/app/views/inventory/inventory.html
+++ b/app/views/inventory/inventory.html
@@ -39,7 +39,8 @@
                 <td class="pointer" data-ng-click="routeTo(itemdetail.clientId)">{{itemdetail.status}}</td>
                 <td class="pointer" data-ng-click="routeTo(itemdetail.clientId)" ng-show="itemdetail.clientId">{{itemdetail.accountNumber}}</td>
                 <td class="pointer" data-ng-click="routeTo(itemdetail.clientId)" ng-show="!itemdetail.clientId">Unallocated</td>
-		<td ng-show="(!itemdetail.clientId)&&PermissionService.showMenu('UPDATE_INVENTORY')"><a ng-click="editQuality(itemdetail.id,itemdetail.quality)"><i class="icon-edit icon-white" ></i>edit</a></td>
+           <td ng-show="(itemdetail.clientId)&&PermissionService.showMenu('UPDATE_INVENTORY')"><a ng-click="editProvSerial(itemdetail.id,itemdetail.quality)"><i class="icon-edit icon-white" ></i>edit Provisioning</a></td>
+		  <td ng-show="(!itemdetail.clientId)&&PermissionService.showMenu('UPDATE_INVENTORY')"><a ng-click="editQuality(itemdetail.id,itemdetail.quality)"><i class="icon-edit icon-white" ></i>edit</a></td>
                 <!-- <td>
                 	<span ng-if="itemdetails.clientId > '0'">
                 	Yes
@@ -297,7 +298,27 @@
               </select>
             </div>
 	   </div>
+ <div class="control-group">
+			<label class="control-label" for="quality">{{'label.itemdetail.provisionserialnum' | translate }}</label>
+			<div class="controls">
+             <input type="text" id="serialnum" ng-model="provserialnum">
+            </div>
+	   </div>
+    </fieldset>
+    </div>
+     <div class="modal-footer">
+        <button id="cancel" class="btn btn-warning" ng-click="cancelQuality()">{{'button.cancel' | translate}}</button>
+     	<button id="submit" class="btn btn-primary" ng-click="approveQuality(quality,provserialnum)" ng-disabled="flagEditQuality">{{'label.confirm' | translate}}</button>
+     </div>
 
+</script>
+<script type="text/ng-template" id="EditProvSerial.html">
+		
+	<div class="modal-header silver">
+        <h3 class="bolder">Edit Provisioning SerialNumber</h3>
+    </div>
+    <div class="modal-body" style="height:160px;">
+       <fieldset>
  <div class="control-group">
 			<label class="control-label" for="quality">{{'label.itemdetail.provisionserialnum' | translate }}</label>
 			<div class="controls">
