--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -314,7 +314,7 @@
 					<td ng-show="provisioningdata.isProcessed == 'Y'" class="pointer" >Success</td>
 					<td ng-show="provisioningdata.isProcessed == 'N'" class="pointer" >Processing</td>
 					<td class="pointer" >{{provisioningdata.receiveMessage}}</td>
-					  <td><a ng-show="provisioningdata.isProcessed == 'F' " ng-click="reProcess(provisioningdata.id)" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td>
+					  <td><a ng-show="provisioningdata.isProcessed == 'F' " ng-click="reProcess(provisioningdata.id)" popover="Re Process" popover-trigger="mouseenter"><i class="icon-play icon-white"></i></a></td>
 				</tr>
         </tbody>
     </table>
