--- a/app/views/organization/viewEventPrice.html
+++ b/app/views/organization/viewEventPrice.html
@@ -39,7 +39,7 @@
 			</tr>
 			<tr>
 				<td>{{'label.eventprice.clienttype' | translate }}</td>
-				<td>{{pricedata.clientTypeId}}</td>
+				<td>{{clientTypeValue}}</td>
 			</tr>
 			<tr>
 				<td>{{'label.eventprice.discount' | translate }}</td>
